7-25 fixed profile alignment for different screens

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,6 +2,8 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   padding: 45px 0;
   margin-bottom: 20px;
+  flex-shrink: 0;
+  font-family: "Inter", Arial, sans-serif;
 }
 .header__around-image {
   width: 173px;
@@ -31,6 +33,9 @@
   .header__around-image {
     margin-left: 20px;
   }
+  .header::before {
+    width: calc(100% + 40px);
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -44,6 +49,7 @@
   .header__around-image {
     width: 126px;
     height: 24px;
-    margin: 28px 0 0 27px;
+    /* margin: 28px 0 0 27px; */
+    margin: 0 0 0 27px;
   }
 }
